--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,8 @@
 // Mixins Here
+
+.flex (@direction, @justify, @align) {
+    flex-direction: @direction;
+    justify-content: @justify;
+    align-items: @align;
+    flex-wrap: wrap;
+}
