--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,3 +6,15 @@
     align-items: @align;
     flex-wrap: wrap;
 }
+
+.btn-style (@bg-color, @txt-color){
+    background-color: @bg-color;
+    color: @txt-color;
+    font-size: 1.75rem;
+    border-radius: 5px;
+    text-align: center;
+    width: 30%;
+    padding: 3%;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+}
