--- a/less/global.css
+++ b/less/global.css
@@ -1,41 +1,34 @@
-// General Styles
-@import "variables.less";
-@import "mixins.less";
-
 * {
   box-sizing: border-box;
 }
-
 html {
   font-size: 62.5%;
 }
-
-html, body {
+html,
+body {
   font-family: 'Ubuntu', sans-serif;
-  color: @main-font-color;
+  color: #5E6164;
 }
-
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: 'Russo One', sans-serif;
-  color: @header-font-color;
+  color: #23293B;
 }
-
 h2 {
   font-size: 3.2rem;
 }
-
 h3 {
   font-size: 2.8rem;
 }
-
 p {
   font-size: 1.6rem;
   line-height: 1.4;
 }
-
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto;
 }
-
