--- a/less/navigation.css
+++ b/less/navigation.css
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
   background-color: #F6F6F6;
@@ -16,13 +16,11 @@
   font-size: 4rem;
   margin: 0 auto;
   color: #23293B;
+  padding: 2%;
 }
 .navbar nav {
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
+  width: 60%;
+  margin: 0 20%;
 }
 .navbar nav a {
   flex-direction: row;
@@ -32,6 +30,6 @@
   text-decoration: none;
   font-family: #454A59;
   font-size: 1.75rem;
-  padding: 0px 5%;
+  padding: 2% 5%;
   color: black;
 }
