--- a/less/home-page.css
+++ b/less/home-page.css
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 500px) {
+  .home {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -12,11 +20,22 @@
   flex-wrap: wrap;
   width: 100%;
 }
+@media only screen and (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media only screen and (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -34,8 +53,23 @@
   display: flex;
   justify-content: center;
 }
+@media only screen and (max-width: 500px) {
+  .home .walk {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 5% 0;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media only screen and (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -49,7 +83,24 @@
   font-size: 1.75rem;
   border-radius: 5px;
   text-align: center;
-  width: 35%;
+  width: 30%;
+  padding: 3%;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+}
+@media only screen and (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 5%;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #F6F6F6;
+  color: #22283A;
+  font-size: 1.75rem;
+  border-radius: 5px;
+  text-align: center;
+  width: 30%;
   padding: 3%;
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
@@ -57,6 +108,14 @@
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media only screen and (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+    order: -1;
+    padding: 5% 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
