--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,9 @@
 @import "mixins.less";
 
 .home {
+  @media @phone {
+    .flex(column, space-between, center);
+  }
 
   .intro {
 
@@ -25,11 +28,20 @@
     flex-wrap: wrap;
     width: 100%;
 
+    .sky, .launch {
+      @media @phone {
+        display: none;
+      }
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width: 100%;
+      }
     }
   }
 
@@ -51,9 +63,18 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      .flex(column, space-between, center);
+      width: 100%;
+      padding: 5% 0;
+    }
+
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -65,12 +86,26 @@
 
       .btn {
         .btn-style(@btn-bg-color, @wild-sand);
+        @media @phone {
+          width: 100%;
+          padding: 5%;
+        }
+
+        &:hover {
+          .btn-style(@wild-sand, @btn-bg-color);
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+        margin: 0;
+        order: -1;
+        padding: 5% 0; 
+      }
       
       img {
         width: 100%;
