--- a/less/navigation.css
+++ b/less/navigation.css
@@ -4,12 +4,14 @@
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+  flex-wrap: nowrap;
   background-color: #F6F6F6;
   border-bottom: 1px solid #F1F1F1;
   margin-bottom: 2%;
 }
 .navbar .nav-text {
   width: 100%;
+  flex-wrap: nowrap;
   text-align: center;
 }
 .navbar .nav-text h1 {
@@ -21,6 +23,17 @@
 .navbar nav {
   width: 60%;
   margin: 0 20%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-wrap: nowrap;
+}
+@media only screen and (max-width: 500px) {
+  .navbar nav {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 .navbar nav a {
   flex-direction: row;
@@ -32,4 +45,14 @@
   font-size: 1.75rem;
   padding: 2% 5%;
   color: black;
+}
+@media only screen and (max-width: 500px) {
+  .navbar nav a {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    padding: 2%;
+  }
 }
