--- a/less/navigation.css
+++ b/less/navigation.css
@@ -8,6 +8,9 @@
   background-color: #F6F6F6;
   border-bottom: 1px solid #F1F1F1;
   margin-bottom: 2%;
+  position: fixed;
+  top: 0;
+  opacity: 0.75;
 }
 .navbar .nav-text {
   width: 100%;
@@ -45,6 +48,9 @@
   font-size: 1.75rem;
   padding: 2% 5%;
   color: black;
+}
+.navbar nav a:hover {
+  color: #454A59;
 }
 @media only screen and (max-width: 500px) {
   .navbar nav a {
