--- a/less/home-page.css
+++ b/less/home-page.css
@@ -1,9 +1,13 @@
+.home {
+  margin-top: 15%;
+}
 @media only screen and (max-width: 500px) {
   .home {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: 20%;
   }
 }
 .home .intro h2 {
